--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ctjs",
-  "version": "1.0.1",
-  "description": "Library for making easy access to Certificate Transparency features",
+  "version": "1.0.2",
+  "description": "CTjs is a full set of classes necessary to work with any kind of Certificate Transparency log (V1 as from RFC6962, or V2 as from RFC6962-bis). In CTjs you could find all necessary validation/verification functions for all related data shipped with full-featured examples showning how to validate/verify. Also in scope of CTjs I made code showing example from RFC6962 item 2.1.3 on a real data from real Certificate Transparency log",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YuryStrozhevsky/CTjs.git"
+  },
   "devDependencies": {
     "babel-cli": "latest",
     "babel-plugin-istanbul": "^4.1.5",
